--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,11 @@
 blosc>=1.8.1,<2
 diskcache==4.1.0
 h5py
-jupyter
+ipython
+jupyterlab
 matplotlib
 numpy<=1.16.4
+pandas
 Pillow
 scikit-image>=0.15.0
 scipy
