--- a/requirements.txt
+++ b/requirements.txt
@@ -10,22 +10,25 @@
 #
 # Then use .venv/bin/python to run the various training scripts.
 
-blosc>=1.8.1,<2
-diskcache==4.1.0
-h5py
-ipython
+# blosc>=1.8.1,<2
+# diskcache==4.1.0
+# h5py
+# numpy<=1.16.4
+# Pillow
+# scikit-image>=0.15.0
+# scipy
+# SimpleITK
+# tensorflow>=1.14,<2
+
+# Personal requirements
 jupyterlab
+ipython
 matplotlib
-numpy<=1.16.4
 pandas
-Pillow
-scikit-image>=0.15.0
-scipy
-SimpleITK
-tensorflow>=1.14,<2
 
 # The book was written targeting PyTorch 1.4, but everything in it should work fine with more up-to-date versions.
-torch==1.4
+torch==2.0.0 
+torchvision==0.15.1
 
 # future is here due to a missing dep in caffe2
 # future
